refactor: make LogbookEntries being handled as report, therefor moving API into report path structure
